@@ -113,6 +113,9 @@
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
   </module>
+  <module id="byzanz">
+    <branch id="HEAD"/>
+  </module>
   <module id="camorama">
     <branch id="HEAD"/>
   </module>
@@ -171,6 +174,9 @@
     <branch id="HEAD" stringfrozen="true"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
+  </module>
+  <module id="deskscribe">
+    <branch id="HEAD"/>
   </module>
   <module id="devhelp">
     <branch id="HEAD" stringfrozen="true"/>
@@ -238,6 +244,9 @@
     <branch id="gnome-2-16" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
   </module>
+  <module id="epiphany-mono">
+    <branch id="HEAD"/>
+  </module>
   <module id="evince">
     <branch id="HEAD" stringfrozen="true"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
@@ -252,6 +261,9 @@
   <module id="evolution-brainread">
     <branch id="HEAD"/>
   </module>
+  <module id="evolution-caldav">
+    <branch id="HEAD"/>
+  </module>
   <module id="evolution-data-server">
     <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
@@ -264,7 +276,13 @@
     <branch id="gnome-2-16" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
   </module>
+  <module id="evolution-gconf-ldap-backend">
+    <branch id="HEAD"/>
+  </module>
   <module id="evolution-jescs">
+    <branch id="HEAD"/>
+  </module>
+  <module id="evolution-scalix">
     <branch id="HEAD"/>
   </module>
   <module id="evolution-webcal">
@@ -272,6 +290,9 @@
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
+  </module>
+  <module id="evolution-xmltv">
+    <branch id="HEAD"/>
   </module>
   <module id="fast-user-switch-applet">
     <branch id="HEAD" stringfrozen="true"/>
@@ -972,6 +993,9 @@
   <module id="gtranslator">
     <branch id="HEAD"/>
   </module>
+  <module id="gturing">
+    <branch id="HEAD"/>
+  </module>
   <module id="gucharmap">
     <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
@@ -996,6 +1020,9 @@
     <branch id="HEAD"/>
   </module>
   <module id="jumpnbumpmenu">
+    <branch id="HEAD"/>
+  </module>
+  <module id="last-exit">
     <branch id="HEAD"/>
   </module>
   <module id="libbonobo">
@@ -1130,6 +1157,9 @@
     <branch id="HEAD"/>
   </module>
   <module id="nautilus-sendto">
+    <branch id="HEAD"/>
+  </module>
+  <module id="nautilus-share">
     <branch id="HEAD"/>
   </module>
   <module id="nautilus-vcs">
@@ -1276,6 +1306,9 @@
     <branch id="gnome-2-16" stringfrozen="true"/>
   </module>
   <module id="webeyes">
+    <branch id="HEAD"/>
+  </module>
+  <module id="xchat-gnome">
     <branch id="HEAD"/>
   </module>
   <module id="xkeyboard-config">
