@@ -131,20 +131,27 @@
     <module id="blam"/>
     <module id="bookmark-applet"/>
     <module id="brasero"/>
+    <module id="byzanz"/>
     <module id="chronojump"/>
     <module id="conglomerate"/>
     <module id="contact-lookup-applet"/>
     <module id="criawips"/>
     <module id="cupid"/>
     <module id="damned-lies"/>
+    <module id="deskscribe"/>
     <module id="divifund"/>
     <module id="drgeo"/>
     <module id="drivel"/>
     <module id="drwright"/>
     <module id="eggcups"/>
     <module id="epiphany-extensions"/>
+    <module id="epiphany-mono"/>
     <module id="evolution-brainread"/>
+    <module id="evolution-caldav"/>
+    <module id="evolution-gconf-ldap-backend"/>
     <module id="evolution-jescs"/>
+    <module id="evolution-scalix"/>
+    <module id="evolution-xmltv"/>
     <module id="f-spot"/>
     <module id="firestarter"/>
     <module id="gdesklets"/>
@@ -172,6 +179,7 @@
     <module id="gnome-devel-docs"/>
     <module id="gnome-hello"/>
     <module id="gnome-jabber"/>
+    <module id="gnome-main-menu"/>
     <module id="gnome-mount"/>
     <module id="gnome-mud"/>
     <module id="gnome-network"/>
@@ -193,12 +201,14 @@
     <module id="gpdf"/>
     <module id="gperfmeter"/>
     <module id="gtranslator"/>
+    <module id="gturing"/>
     <module id="guikachu"/>
     <module id="gwget"/>
     <module id="gyrus"/>
     <module id="hipo"/>
     <module id="istanbul"/>
     <module id="jumpnbumpmenu"/>
+    <module id="last-exit"/>
     <module id="libgircclient"/>
     <module id="libgnetwork"/>
     <module id="libgnomecups"/>
@@ -220,6 +230,7 @@
     <module id="nautilus-rc"/>
     <module id="nautilus-rpm"/>
     <module id="nautilus-sendto"/>
+    <module id="nautilus-share"/>
     <module id="nautilus-vcs"/>
     <module id="NetworkManager" branch="NETWORKMANAGER_0_6_0_RELEASE"/>
     <module id="network-manager-applet" branch="network-manager-applet-0-6"/>
@@ -241,7 +252,7 @@
     <module id="straw"/>
     <module id="tracker"/>
     <module id="webeyes"/>
-    <module id="gnome-main-menu"/>
+    <module id="xchat-gnome"/>
   </release>
   <release id="gnome-2-16" stringfrozen="true">
     <_description>Gnome 2.16</_description>
