@@ -1,3 +1,9 @@
+2007-03-31  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: Added a bunch of new modules in extras.
+	Fixes bug #424811.
+
 2007-03-30  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
